syntax = "proto3";
package company.service;
option go_package = "github.com/ldp/server/company";

import "google/api/annotations.proto";

message CompanyReq {
  uint64 CompanyId = 1;
}

message CompanyResp {
  int32 code = 1;
  string message = 2;
  CompanyDetail Detail = 3;
  string requestId = 4;
}

message CompanyDetail {
  string nickname = 1;
  string username = 3;
  string email = 4;
  string mobile = 5;
  string phone = 6;
  string idCardFront = 7;
  string idCardBack = 8;
  uint64 seniority = 9;
  string profile = 10;
  string location = 11;
  string companyName = 12;
  string avatar = 13;
  string license = 14;
  uint64 userId = 15;
}

service CompanyService {
  rpc CompanyDetail(CompanyReq) returns (CompanyResp) {
    option (google.api.http) = {
      post: "/v1/company/detail"
      body: "*"
    };
  }
}